@@ -60,6 +60,16 @@ can be cleaned up must be registered in $TYPO3_CONF_VARS['SC_OPTIONS']
 ['tables'] with its table name and a field. After that they can
 be selected in the scheduler task.
 
+
+* New scheduler task to delete old files from fileadmin trash directories
+
+The scheduler task 'Fileadmin recycler garbage collection' can be used to
+definitely delete old files from _recycler_ directories. When a _recycler_
+directory exists within the path of a file to delete via the File module, the
+file is not actually deleted, but stored in the _recycler_ folder.
+This new task now deletes all files insider _recycler_ folders that have been
+moved there for longer than a given number of days.
+
 -------------------------------------------------------------------------------
 Backend
 -------------------------------------------------------------------------------
